--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Chung-Kai Cheng",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2"
   }
 }
